posix: Correct attribute access mode on readlinkat [BZ #27024].

(cherry picked from commit 2cd361b5114ff3f2f55684458d8bf9836c624b90)